--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 data/COVID-19_Case_Surveillance_Public_Use_Data.csv
 data/Covid_Race_Death_Numerical_Data.csv
 *.joblib
+twitter_data_processing/twitter_key.txt
