--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ data/COVID-19_Case_Surveillance_Public_Use_Data.csv
 data/Covid_Race_Death_Numerical_Data.csv
 *.joblib
 twitter_data_processing/twitter_key.txt
+twitter_data_processing/tweet_logs/
