--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ data/Covid_Race_Death_Numerical_Data.csv
 twitter_data_processing/twitter_key.txt
 twitter_data_processing/tweet_logs/
 *.csv
+*.json
